--- a/Pages/Admin/Create.cshtml
+++ b/Pages/Admin/Create.cshtml
@@ -5,38 +5,42 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 
-<h4>Admin</h4>
+<h1>@Localizer["Create"]</h1>
+
+<h4>@Localizer["Admin"]</h4>
 <hr />
+<h2>@Localizer["Введите свои данные:"]</h2>
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Admin.LastName" class="control-label"></label>
+                <label asp-for="Admin.LastName" class="control-label">@Localizer["Фамилия"]</label>
                 <input asp-for="Admin.LastName" class="form-control" />
                 <span asp-validation-for="Admin.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Admin.FirstMidName" class="control-label"></label>
+                <label asp-for="Admin.FirstMidName" class="control-label">@Localizer["Имя"]</label>
                 <input asp-for="Admin.FirstMidName" class="form-control" />
                 <span asp-validation-for="Admin.FirstMidName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Admin.HireDate" class="control-label"></label>
+                <label asp-for="Admin.HireDate" class="control-label">@Localizer["Дата найма"]</label>
                 <input asp-for="Admin.HireDate" class="form-control" />
                 <span asp-validation-for="Admin.HireDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="Index">@Localizer["Back to List"]</a>
 </div>
 
 @section Scripts {
