--- a/Pages/Admin/Details.cshtml
+++ b/Pages/Admin/Details.cshtml
@@ -5,10 +5,13 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
+<h1>@Localizer["Details"]</h1>
 
 <div>
-    <h4>Admin</h4>
+    <h4>@Localizer["Admin"]</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -32,6 +35,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Admin.ID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Admin.ID">@Localizer["Edit"]</a> |
+    <a asp-page="./Index">@Localizer["Back to List"]</a>
 </div>
