--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <button type="button" name="Language" class="form-control">@Localizer["Сменить язык"]</button>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index">@Localizer["Аккаунт"]</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
