--- a/Pages/User/Delete.cshtml
+++ b/Pages/User/Delete.cshtml
@@ -5,9 +5,12 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 
-<h3>Are you sure you want to delete this?</h3>
+<h1>@Localizer["Delete"]</h1>
+
+<h3>@Localizer["Are you sure you want to delete this?"]</h3>
 <div>
     <h4>User</h4>
     <hr />
@@ -67,10 +70,10 @@
             @Html.DisplayFor(model => model.User.Comments)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="User.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="./Index">@Localizer["Back to List"]</a>
     </form>
 </div>
