--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -21,20 +21,16 @@
 <h3>@Localizer["Компании с самым большим рейтингом"]</h3>
 <br />
 <div class="table-responsive">
-    <table class="table table-hover">
+    <table class="table">
         <thead>
             <tr>
-                <th>@Localizer["Название"]</th>
-                <th>
-                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort">
-                        @Html.DisplayNameFor(model => model.Company[0].Rating)
-                    </a>
-                </th>
+                <th>Title</th>
+                <th>Rating</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.Company)
+            @foreach (var item in Model.AdminData.Company)
             {
                 string selectedRow = "";
                 if (item.ID == Model.CompanyID)
@@ -48,6 +44,20 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.Rating)
                     </td>
+                    <td>
+                        @if (item.OfficeAssignment != null)
+                        {
+                            @item.OfficeAssignment.Location
+                        }
+                    </td>
+                    @*<td>
+                        @{
+                            foreach (var company in item.AdminIndexData)
+                            {
+                                @company.Company.CompanyID @:  @company.Company.Title <br />
+                            }
+                        }
+                    </td>*@
                 </tr>
             }
         </tbody>
@@ -57,95 +67,14 @@
 <h3>@Localizer["Обновленные компании"]</h3>
 <br />
 <div class="table-responsive">
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>@Localizer["Название"]</th>
-                <th>
-                    <a asp-page="./Index" asp-route-sortOrder="@Model.DateSort">
-                        @Html.DisplayNameFor(model => model.Company[0].EnrollmentDate)
-                    </a>
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.Company)
-            {
-                string selectedRow = "";
-                if (item.ID == Model.CompanyID)
-                {
-                    selectedRow = "table-success";
-                }
-                <tr class="@selectedRow">
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.EnrollmentDate)
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
 </div>
 
 <h3>@Localizer["Облако тэгов"]</h3>
 <br />
 <div class="table-responsive">
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>@Localizer["Тэги"]</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.Company)
-            {
-                string selectedRow = "";
-                if (item.ID == Model.CompanyID)
-                {
-                    selectedRow = "table-success";
-                }
-                <tr class="@selectedRow">
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Tags)
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
 </div>
 
 <h3>@Localizer["Новости"]</h3>
 <br />
 <div class="table-responsive">
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>@Localizer["Тема"]</th>
-                <th>@Localizer["Новость"]</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.Company)
-            {
-                string selectedRow = "";
-                if (item.ID == Model.CompanyID)
-                {
-                    selectedRow = "table-success";
-                }
-                <tr class="@selectedRow">
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Topic)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.News)
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
 </div>
