--- a/Pages/User/Index.cshtml
+++ b/Pages/User/Index.cshtml
@@ -10,8 +10,8 @@
 
 <h1>@Localizer["User"]</h1>
 
-<p>
-    <a asp-page="Create">@Localizer["Create New"]</a>
+<p> 
+    <a asp-page="Create">@Localizer["Create New"]</a> @*создание компании*@
 </p>
 <table class="table">
     <thead>
