--- a/Pages/Company/Details.cshtml
+++ b/Pages/Company/Details.cshtml
@@ -113,6 +113,11 @@
                         <a asp-page="./Edit" asp-route-id="@Model.Company.ID">@Localizer["Редактировать"]</a> |
                         <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
                     </div>
+                    <form action="https://www.paypal.com/donate" method="post" target="_top">
+                        <input type="hidden" name="hosted_button_id" value="NMUMHG7VQM4FL" />
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                        <img alt="" border="0" src="https://www.paypal.com/en_BY/i/scr/pixel.gif" width="1" height="1" />
+                    </form>
                     <div class="form-group">
                         <form>
                             <span>@Localizer["Имя:"]</span><br>
