--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 
-<h1>Coumpany</h1>
+<h1>@Localizer["Coumpany"]</h1>
 
 <table class="table">
     <thead>
