--- a/Pages/User/Index.cshtml
+++ b/Pages/User/Index.cshtml
@@ -8,7 +8,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 
-<h1>@Localizer["User"]</h1>
+<h1>@Localizer["Ваши компании"]</h1>
 
 <p> 
     <a asp-page="Create">@Localizer["Create New"]</a> @*создание компании*@
