--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
     <title>@ViewData["Title"]SiteAds</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" type="text/css" href="/css/dark.css">
-    <link rel="stylesheet" type="text/css" href="/css/light.css" id="theme-link">
+    <link rel="stylesheet" type="text/css" href="/css/dark.css" />
+    <link rel="stylesheet" type="text/css" href="/css/light.css" id="theme-link" />
 </head>
 <body>
     <header>
