--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -24,13 +24,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Компании"]</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Company"]</a>
                         </li>
                         <li class="nav-item">
-                            <button id="theme-button" type="button" name="Topic" class="form-control">@Localizer["Сменить тему"]</button>
+                            <button id="theme-button" type="button" name="Topic" class="form-control">@Localizer["Change the subject"]</button>
                         </li>
                         <li class="nav-item">
-                            <button type="button" name="Language" class="form-control">@Localizer["Сменить язык"]</button>
+                            <button type="button" name="Language" class="form-control">@Localizer["Change the language"]</button>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -46,8 +46,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - MyWebSite - <a asp-area="" asp-page="/Privacy">@Localizer["Конфиденциальность"]</a>
-            <a asp-area="" asp-page="/About">@Localizer["Информация"]</a>
+            &copy; 2021 - MyWebSite - <a asp-area="" asp-page="/Privacy">@Localizer["Privacy Policy"]</a>
+            <a asp-area="" asp-page="/About">@Localizer["Information"]</a>
         </div>
     </footer>
 
