--- a/Pages/User/Edit.cshtml
+++ b/Pages/User/Edit.cshtml
@@ -18,42 +18,42 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="User.ID" />
             <div class="form-group">
-                <label asp-for="User.LastName" class="control-label">@Localizer["Фамилия"]</label>
+                <label asp-for="User.LastName" class="control-label">@Localizer["Last Name"]</label>
                 <input asp-for="User.LastName" class="form-control" />
                 <span asp-validation-for="User.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.FirstMidName" class="control-label">@Localizer["Имя"]</label>
+                <label asp-for="User.FirstMidName" class="control-label">@Localizer["First Name"]</label>
                 <input asp-for="User.FirstMidName" class="form-control" />
                 <span asp-validation-for="User.FirstMidName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.HireDate" class="control-label">@Localizer["Дата найма"]</label>
+                <label asp-for="User.HireDate" class="control-label">@Localizer["Hire Date"]</label>
                 <input asp-for="User.HireDate" class="form-control" />
                 <span asp-validation-for="User.HireDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.Age" class="control-label">@Localizer["Возраст"]</label>
+                <label asp-for="User.Age" class="control-label">@Localizer["Age"]</label>
                 <input asp-for="User.Age" class="form-control" />
                 <span asp-validation-for="User.Age" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.Country" class="control-label">@Localizer["Страна"]</label>
+                <label asp-for="User.Country" class="control-label">@Localizer["Country"]</label>
                 <input asp-for="User.Country" class="form-control" />
                 <span asp-validation-for="User.Country" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.City" class="control-label">@Localizer["Город"]</label>
+                <label asp-for="User.City" class="control-label">@Localizer["City"]</label>
                 <input asp-for="User.City" class="form-control" />
                 <span asp-validation-for="User.City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.Email" class="control-label">@Localizer["Почта"]</label>
+                <label asp-for="User.Email" class="control-label">@Localizer["Email"]</label>
                 <input asp-for="User.Email" class="form-control" />
                 <span asp-validation-for="User.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.AboutMe" class="control-label">@Localizer["О себе"]</label>
+                <label asp-for="User.AboutMe" class="control-label">@Localizer["About Me"]</label>
                 <input asp-for="User.AboutMe" class="form-control" />
                 <span asp-validation-for="User.AboutMe" class="text-danger"></span>
             </div>
