--- a/Pages/Admin/Create.cshtml
+++ b/Pages/Admin/Create.cshtml
@@ -12,23 +12,23 @@
 
 <h4>@Localizer["Admin"]</h4>
 <hr />
-<h2>@Localizer["Введите свои данные:"]</h2>
+<h2>@Localizer["Enter your details:"]</h2>
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Admin.LastName" class="control-label">@Localizer["Фамилия"]</label>
+                <label asp-for="Admin.LastName" class="control-label">@Localizer["Last Name"]</label>
                 <input asp-for="Admin.LastName" class="form-control" />
                 <span asp-validation-for="Admin.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Admin.FirstMidName" class="control-label">@Localizer["Имя"]</label>
+                <label asp-for="Admin.FirstMidName" class="control-label">@Localizer["First Name"]</label>
                 <input asp-for="Admin.FirstMidName" class="form-control" />
                 <span asp-validation-for="Admin.FirstMidName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Admin.HireDate" class="control-label">@Localizer["Дата найма"]</label>
+                <label asp-for="Admin.HireDate" class="control-label">@Localizer["Hire Date"]</label>
                 <input asp-for="Admin.HireDate" class="form-control" />
                 <span asp-validation-for="Admin.HireDate" class="text-danger"></span>
             </div>
