--- a/Pages/Admin/Delete.cshtml
+++ b/Pages/Admin/Delete.cshtml
@@ -12,7 +12,7 @@
 
 <h3>@Localizer["Are you sure you want to delete this?"]</h3>
 <div>
-    <h4>Admin</h4>
+    <h4>@Localizer["Admin"]</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
