--- a/Pages/Company/Index.cshtml
+++ b/Pages/Company/Index.cshtml
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1>@Localizer["Компании"]</h1>
+                    <h1>@Localizer["Company"]</h1>
 
                     <p>
                         <a asp-page="Create">@Localizer["Создать"]</a>
@@ -22,10 +22,10 @@
                     <form asp-page="./Index" method="get">
                         <div class="form-actions no-color">
                             <p>
-                                @Localizer["Поиск по имени:"]
+                                @Localizer["Search:"]
                                 <input type="text" name="SearchString" value="@Model.CurrentFilter" />
                                 <input type="submit" value="Search" class="btn btn-primary" /> |
-                                <a asp-page="./Index">@Localizer["Вернуться к списку"]</a>
+                                <a asp-page="./Index">@Localizer["Back to list"]</a>
                             </p>
                         </div>
                     </form>
@@ -69,8 +69,8 @@
                                             @Html.DisplayFor(modelItem => item.EnrollmentDate)
                                         </td>
                                         <td>
-                                            <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Редактировать"]</a> |
-                                            <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Подробности"]</a> |
+                                            <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Edit"]</a> |
+                                            <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Details"]</a> |
                                             <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["Удалить"]</a>
                                         </td>
                                     </tr>
