--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -9,7 +9,7 @@
 
 <h1>@Localizer["Coumpany"]</h1>
 <br />
-<h5>@Localizer["Компании с самым большим рейтингом"]</h5>
+<h5>@Localizer["Companies with the highest rating"]</h5>
 <br />
 <table class="table">
     <thead>
@@ -44,7 +44,7 @@
     </tbody>
 </table>
 <br />
-<h5>@Localizer["Обновленные компании"]</h5>
+<h5>@Localizer["Updated the company"]</h5>
 <br />
 <table class="table">
     <thead>
@@ -73,7 +73,7 @@
     </tbody>
 </table>
 <br />
-<h5>@Localizer["Тэги"]</h5>
+<h5>@Localizer["Tags"]</h5>
 <br />
 <table class="table">
     <thead>
