--- a/Pages/User/Index.cshtml
+++ b/Pages/User/Index.cshtml
@@ -8,7 +8,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 
-<h1>@Localizer["Ваши компании"]</h1>
+<h1>@Localizer["Your companies"]</h1>
 
 <p> 
     <a asp-page="Create">@Localizer["Create New"]</a> @*создание компании*@
@@ -19,8 +19,6 @@
             <th>@Localizer["Last Name"]</th>
             <th>@Localizer["First Name"]</th>
             <th>@Localizer["Hire Date"]</th>
-            <th>@Localizer["Office"]</th>
-            <th>@Localizer["Courses"]</th>
             <th></th>
         </tr>
     </thead>
@@ -41,24 +39,6 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.HireDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Age)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Country)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.City)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AboutMe)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Comments)
                 </td>
                 <td>
                     @if (item.OfficeAssignment != null)
