--- a/Pages/Company/Edit.cshtml
+++ b/Pages/Company/Edit.cshtml
@@ -63,15 +63,19 @@
                                 </div>
                                 <div class="form-group">
                                     <h5 asp-for="Company.Images" class="control-label">Images</h5>
-                                    <div id="drop-area">
-                                        <div class="my-form">
-                                            <label asp-for="Company.Images" class="control-label"></label>
-                                            <p>@Localizer["Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область"]</p>
-                                            <input asp-for="Company.Images" class="form-control" type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
-                                            <span asp-validation-for="Company.Images" class="text-danger"></span>
-                                            <label class="button">@Localizer["Выбрать изображения"]</label>
-                                        </div>
+                                    <div class="mb-3">
+                                        <label for="formFileMultiple" class="form-label">Multiple files input example</label>
+                                        <input class="form-control" type="file" id="formFileMultiple" multiple>
                                     </div>
+                                    @*<div id="drop-area">
+                                            <div class="my-form">
+                                                <label asp-for="Company.Images" class="control-label"></label>
+                                                <p>@Localizer["Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область"]</p>
+                                                <input asp-for="Company.Images" class="form-control" type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
+                                                <span asp-validation-for="Company.Images" class="text-danger"></span>
+                                                <label class="button">@Localizer["Выбрать изображения"]</label>
+                                            </div>
+                                        </div>*@
                                 </div>
                                 <div class="form-group">
                                     <h5 asp-for="Company.Video" class="control-label">Video</h5>
