--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <button id="theme-button" type="button" name="Topic" class="form-control">@Localizer["Change the subject"]</button>
                         </li>
                         <li class="nav-item">
-                            <button type="button" name="Language" class="form-control">@Localizer["Change the language"]</button>
+                            <button type="language-button" name="Language" class="form-control">@Localizer["Change the language"]</button>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
