--- a/Pages/Company/Create.cshtml
+++ b/Pages/Company/Create.cshtml
@@ -64,7 +64,11 @@
                                 </div>
                                 <div class="form-group">
                                     <h5 asp-for="Company.Images" class="control-label">@Localizer["Images"]</h5>
-                                    <div id="drop-area">
+                                    <div class="mb-3">
+                                        <label for="formFileMultiple" class="form-label">Multiple files input example</label>
+                                        <input class="form-control" type="file" id="formFileMultiple" multiple>
+                                    </div>
+                                    @*<div id="drop-area">
                                         <div class="my-form">
                                             <label asp-for="Company.Images" class="control-label"></label>
                                             <p>@Localizer["Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область"]</p>
@@ -72,7 +76,7 @@
                                             <span asp-validation-for="Company.Images" class="text-danger"></span>
                                             <label class="button">@Localizer["Выбрать изображения"]</label>
                                         </div>
-                                    </div>
+                                    </div>*@
                                 </div>
                                 <div class="form-group">
                                     <h5 asp-for="Company.Video" class="control-label">@Localizer["Video"]</h5>
