--- a/Pages/Admin/Edit.cshtml
+++ b/Pages/Admin/Edit.cshtml
@@ -14,7 +14,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form class="row g-3">
+        <form method="post" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Admin.ID" />
             <div class="col-md-6">
@@ -44,9 +44,6 @@
                 </div>
             </div>
         </form>
-        @*<form method="post">
-
-            </form>*@
     </div>
 </div>
 
