--- a/Pages/Admin/Create.cshtml
+++ b/Pages/Admin/Create.cshtml
@@ -15,7 +15,7 @@
 <h2>@Localizer["Enter your details:"]</h2>
 <div class="row">
     <div class="col-md-4">
-        <form class="row g-3">
+        <form method="post" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="col-md-6">
                 <div class="form-group">
@@ -44,9 +44,6 @@
                 </div>
             </div>
         </form>
-        @*<form method="post">
-
-        </form>*@
     </div>
 </div>
 
