--- a/Pages/Company/Create.cshtml
+++ b/Pages/Company/Create.cshtml
@@ -19,7 +19,7 @@
 
                     <h4>@Localizer["Company"]</h4>
                     <hr />
-                    <form class="row g-3">
+                    <form method="post" class="row g-3">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="col-md-6">
                             <div class="form-group">
@@ -46,7 +46,7 @@
                                     <option>@Localizer["Nature"]</option>
                                     <option>@Localizer["Culture"]</option>
                                     <option>@Localizer["Game"]</option>
-                                    <option>@Localizer["Другое"]</option>
+                                    <option>@Localizer["Other"]</option>
                                 </select>
                                 <span asp-validation-for="Company.Thematics" class="text-danger"></span>
                             </div>
@@ -69,18 +69,8 @@
                             <div class="form-group">
                                 <h5 asp-for="Company.Images" class="control-label">@Localizer["Images"]</h5>
                                 <div class="mb-3">
-                                    @*<label for="formFileMultiple" class="form-label">Multiple files input example</label>*@
                                     <input class="form-control" type="file" id="formFileMultiple" multiple>
                                 </div>
-                                @*<div id="drop-area">
-                                        <div class="my-form">
-                                            <label asp-for="Company.Images" class="control-label"></label>
-                                            <p>@Localizer["Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область"]</p>
-                                            <input asp-for="Company.Images" class="form-control" type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
-                                            <span asp-validation-for="Company.Images" class="text-danger"></span>
-                                            <label class="button">@Localizer["Выбрать изображения"]</label>
-                                        </div>
-                                    </div>*@
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -97,11 +87,6 @@
                                 <span asp-validation-for="Company.Topic" class="text-danger"></span>
                             </div>
                         </div>
-                        @*<div class="form-group">
-                                <h5 asp-for="Company.Rating" class="control-label">@Localizer["Rating"]</h5>
-                                <input asp-for="Company.Rating" class="form-control" />
-                                <span asp-validation-for="Company.Rating" class="text-danger"></span>
-                            </div>*@
                         <div class="col-12">
                             <div class="form-group">
                                 <h5 asp-for="Company.News" class="control-label">@Localizer["News"]</h5>
@@ -129,13 +114,6 @@
                             </div>
                         </div>
                     </form>
-                    @*<div class="row">
-                            <div class="col-md-12">
-                                <form method="post">
-
-                                </form>
-                            </div>
-                        </div>*@
                     <div>
                         <a asp-page="Index">@Localizer["Back to List"]</a>
                     </div>
@@ -144,8 +122,6 @@
         </div>
     </div>
 </div>
-
-<script src="/js/DragAndDrop.js"></script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
