--- a/Pages/User/Create.cshtml
+++ b/Pages/User/Create.cshtml
@@ -16,7 +16,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form class="row g-3">
+        <form method="post" class="row g-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="col-md-6">
                 <div class="form-group">
